SSCSCI-1982: outcome migration (#106)
* created new Outcome to Hearing Outcome migration

* refactored code

* Added tests

* Bumping chart version/ fixing aliases

* checkstyle fix

* Added service tests

* Added tests to improve coverage

* Added placeholder for outcome mapping

* Bumping chart version/ fixing aliases

* code review updates

* missed changes

* log update

* moved outcome to case outcome mapping from sscs-common

* resetting did PO attend field

* checkstyle fix

* removed old reference for finalDecisionOutcomeMigration

---------

Co-authored-by: hmcts-jenkins-j-to-z <61242337+hmcts-jenkins-j-to-z[bot]@users.noreply.github.com>